[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/ui/nine.png" type="Texture" id=1]
[ext_resource path="res://scenes/Button.tscn" type="PackedScene" id=2]
[ext_resource path="res://presets/font.tres" type="DynamicFont" id=3]
[ext_resource path="res://scripts/HUD.gd" type="Script" id=4]
[ext_resource path="res://assets/EpilepsySansBold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/home/jouro.png" type="Texture" id=6]
[ext_resource path="res://presets/Theme.tres" type="Theme" id=7]
[ext_resource path="res://assets/EpilepsySans.ttf" type="DynamicFontData" id=8]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=3]
size = 18
outline_color = Color( 0.858824, 0.882353, 0.713726, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 13
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=5]
size = 14
outline_color = Color( 0.858824, 0.882353, 0.713726, 1 )
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.568627, 0.698039, 0.568627, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.176471, 0.203922, 0.356863, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.176471, 0.203922, 0.356863, 1 )

[node name="HUD" type="CanvasLayer" groups=[
"hud",
]]
script = ExtResource( 4 )

[node name="LabelVersion" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -14.0
text = "v0.6"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelInteractable" type="Label" parent="."]
margin_right = 122.0
margin_bottom = 26.0
rect_pivot_offset = Vector2( 60.3612, 13.7118 )
custom_fonts/font = ExtResource( 3 )
text = "Pick Up"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" parent="." instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -169.0
margin_top = 48.0
margin_right = 169.0
margin_bottom = 95.0

[node name="Dialogue" type="NinePatchRect" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_top = -178.0
margin_right = -6.0
margin_bottom = -8.0
texture = ExtResource( 1 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Dialogue"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 18.0
margin_right = -24.0
margin_bottom = -18.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0.858824, 0.882353, 0.713726, 1 )
text = "Scroll down in the inspector until you see \"Custom styles\". Create a new style for \"Normal\", and make it a \"new StyleBoxTexture\". Edit the StyleBoxTexture."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inventory" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 400.0
margin_right = -30.0
margin_bottom = -30.0
texture = ExtResource( 1 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="Control" parent="Inventory"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 18.0
margin_right = -24.0
margin_bottom = -18.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Inventory/RichTextLabel"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Inventory/RichTextLabel/Control"]
margin_right = 60.0
margin_bottom = 60.0
theme = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Inventory/RichTextLabel/Control/Button"]
position = Vector2( 30, 30 )
scale = Vector2( 2, 2 )
frames = SubResource( 2 )

[node name="Count" type="Label" parent="Inventory/RichTextLabel/Control/Button"]
margin_left = 40.0
margin_top = 40.0
margin_right = 60.0
margin_bottom = 60.6875
text = "99"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="Inventory/RichTextLabel/Control"]
margin_left = 70.0
margin_right = 130.0
margin_bottom = 60.0
theme = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Inventory/RichTextLabel/Control/Button2"]
position = Vector2( 30, 30 )
scale = Vector2( 2, 2 )
frames = SubResource( 2 )

[node name="Count2" type="Label" parent="Inventory/RichTextLabel/Control/Button2"]
margin_left = 40.0
margin_top = 40.0
margin_right = 62.0
margin_bottom = 61.0
text = "99"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="Inventory/RichTextLabel/Control"]
margin_left = 140.0
margin_top = 0.529999
margin_right = 200.0
margin_bottom = 60.53
theme = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Inventory/RichTextLabel/Control/Button3"]
position = Vector2( 30, 30 )
scale = Vector2( 2, 2 )
frames = SubResource( 2 )

[node name="Count3" type="Label" parent="Inventory/RichTextLabel/Control/Button3"]
margin_left = 40.0
margin_top = 40.0
margin_right = 62.0
margin_bottom = 62.0
text = "99"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="Inventory/RichTextLabel/Control"]
margin_left = 210.0
margin_right = 270.0
margin_bottom = 60.0
theme = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Inventory/RichTextLabel/Control/Button4"]
position = Vector2( 30, 30 )
scale = Vector2( 2, 2 )
frames = SubResource( 2 )

[node name="Count4" type="Label" parent="Inventory/RichTextLabel/Control/Button4"]
margin_left = 40.0
margin_top = 40.0
margin_right = 62.0
margin_bottom = 62.0
text = "99"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control2" type="Control" parent="Inventory/RichTextLabel"]
margin_top = 70.0
margin_right = 40.0
margin_bottom = 110.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Inventory/RichTextLabel/Control2"]
margin_right = 60.0
margin_bottom = 60.0
theme = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Inventory/RichTextLabel/Control2/Button"]
position = Vector2( 30, 30 )
scale = Vector2( 2, 2 )
frames = SubResource( 2 )

[node name="Count" type="Label" parent="Inventory/RichTextLabel/Control2/Button"]
margin_left = 40.0
margin_top = 40.0
margin_right = 60.0
margin_bottom = 60.6875
text = "99"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="Inventory/RichTextLabel/Control2"]
margin_left = 70.0
margin_right = 130.0
margin_bottom = 60.0
theme = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Inventory/RichTextLabel/Control2/Button2"]
position = Vector2( 30, 30 )
scale = Vector2( 2, 2 )
frames = SubResource( 2 )

[node name="Count2" type="Label" parent="Inventory/RichTextLabel/Control2/Button2"]
margin_left = 40.0
margin_top = 40.0
margin_right = 62.0
margin_bottom = 61.0
text = "99"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="Inventory/RichTextLabel/Control2"]
margin_left = 140.0
margin_top = 0.529999
margin_right = 200.0
margin_bottom = 60.53
theme = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Inventory/RichTextLabel/Control2/Button3"]
position = Vector2( 30, 30 )
scale = Vector2( 2, 2 )
frames = SubResource( 2 )

[node name="Count3" type="Label" parent="Inventory/RichTextLabel/Control2/Button3"]
margin_left = 40.0
margin_top = 40.0
margin_right = 62.0
margin_bottom = 62.0
text = "99"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="Inventory/RichTextLabel/Control2"]
margin_left = 210.0
margin_right = 270.0
margin_bottom = 60.0
theme = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Inventory/RichTextLabel/Control2/Button4"]
position = Vector2( 30, 30 )
scale = Vector2( 2, 2 )
frames = SubResource( 2 )

[node name="Count4" type="Label" parent="Inventory/RichTextLabel/Control2/Button4"]
margin_left = 40.0
margin_top = 40.0
margin_right = 62.0
margin_bottom = 62.0
text = "99"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control3" type="Control" parent="Inventory/RichTextLabel"]
margin_left = 280.0
margin_right = 495.0
margin_bottom = 131.0

[node name="Label" type="Label" parent="Inventory/RichTextLabel/Control3"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 3 )
text = "Item Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Inventory/RichTextLabel/Control3"]
margin_left = 3.0
margin_top = 29.0
margin_right = 217.0
margin_bottom = 98.0
custom_fonts/normal_font = SubResource( 4 )
text = "The weekend is over and the week begins. What did you do with your weekend? How's the week ahead looking for you?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Inventory/RichTextLabel/Control3"]
margin_left = 4.67194
margin_top = 103.45
margin_right = 48.6719
margin_bottom = 128.45
theme = ExtResource( 7 )
text = "Use"

[node name="Button2" type="Button" parent="Inventory/RichTextLabel/Control3"]
margin_left = 59.4004
margin_top = 103.45
margin_right = 110.4
margin_bottom = 128.45
theme = ExtResource( 7 )
text = "Drop"

[node name="TweenFade" type="Tween" parent="."]

[node name="TweenInteractable" type="Tween" parent="."]
repeat = true
playback/repeat = true

[node name="TimerFade" type="Timer" parent="."]

[node name="TimerDeath" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Options" type="Control" parent="."]
margin_left = 0.222733
margin_right = 40.2227
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerFrames" type="Control" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 193.0
margin_bottom = 95.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="PlayerFrames"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.764706, 0.784314, 0.607843, 0.466667 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerFramesInner" type="Control" parent="PlayerFrames"]
margin_left = 10.0
margin_top = 10.0
margin_right = 167.0
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelName" type="Label" parent="PlayerFrames/PlayerFramesInner"]
margin_right = 87.0
margin_bottom = 26.0
rect_pivot_offset = Vector2( 49.7733, 13 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.176471, 0.203922, 0.356863, 1 )
text = "Level 12    Tom"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelSpores" type="Label" parent="PlayerFrames/PlayerFramesInner"]
margin_top = 46.0
margin_right = 87.0
margin_bottom = 72.0
rect_pivot_offset = Vector2( 49.7733, 13 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.176471, 0.203922, 0.356863, 1 )
text = "* 324"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BarHealth" type="ProgressBar" parent="PlayerFrames/PlayerFramesInner"]
anchor_right = 1.0
margin_left = -0.44545
margin_top = 17.0
margin_right = -0.44545
margin_bottom = 31.0
custom_styles/fg = SubResource( 6 )
custom_styles/bg = SubResource( 7 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BarStamina" type="ProgressBar" parent="PlayerFrames/PlayerFramesInner"]
anchor_right = 1.0
margin_top = 33.0
margin_bottom = 43.0
custom_styles/fg = SubResource( 6 )
custom_styles/bg = SubResource( 7 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRectFade" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.176471, 0.203922, 0.356863, 0 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
[connection signal="tween_all_completed" from="TweenFade" to="." method="_on_TweenFade_tween_all_completed"]
[connection signal="tween_completed" from="TweenFade" to="." method="_on_TweenFade_tween_completed"]
[connection signal="tween_started" from="TweenFade" to="." method="_on_TweenFade_tween_started"]
[connection signal="timeout" from="TimerDeath" to="." method="_on_TimerDeath_timeout"]
